welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: ')' expected but ';' found.
	2 * biscuits != caseOrange + 1;)
                                      ^RunHalf:7: error: illegal start of statement
	2 * biscuits != caseOrange + 1;)
                                       ^